tdf#150606 sw: layout: leave follow SwTabFrame invalid in columns

With the minimised bugdoc, on Undo, some 12 or so pages are created, and
the end of the deleted table is shown in the document view.

So first the last pages are layouted, and then once those are done
layout proceeds from page 1.

The problem is that on page 9, a table remains in the 2nd column of the
section, and there is nothing in the 1st column and on pages 5-8.

This is because ::CalcContent() is the last thing that formats the table
on page 9, and it explicitly disables MoveBwd() for follow tables via
m_bLockBackMove.

That appears to be intentional but because it's already been there since
initial CVS import it's unclear why; it might be based on the assumption
that a previous column would have moved over rows from the follow table
already.

Try to encourage the table to try to MoveBwd() at a later time, when
it's being formatted from the SwLayAction::FormatContent_() loop, which
appears to help.

(somehow regression from commit 723728cd358693b8f4bc9d913541aa4479f2bd48)

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152485
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 5a739d98d0efa5be2130b7d758d494012abc87b3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152446
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 560b94971b656914d17c9d1befdad2dbd3f1119a)

Change-Id: I421525269948aa58888f5302e6db234c89230f00